fix page size on mobile

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
   margin: auto;
   width: 375px;
   max-width: 100%;
+  height: 100%;
 }
 .article {
   display: none;
